Refactor the codebase. Move business and file i/o logic from ViewModels to Repositories.